# convex_caustics

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Readme.md
examples/: einstein.pgm  gradient8x8.pgm  rings.pgm
examples/olympic_rings/: input.pgm  lens.stl  output.off  output.stl
src/: common.hpp  data_analysis.ipynb  egi.cpp  egi.hpp  globals.hpp  little.cpp  little.hpp  main.cpp  pgm.hpp
